# conformer-tts

./: .gitignore  README.md  TTS_ENGINE_PLAN.md  pyproject.toml  requirements.txt
configs/: default.yaml  default_large.yaml  default_small.yaml
conformer_tts/: __init__.py
conformer_tts/inference/: server.py  synthesizer.py
conformer_tts/models/: __init__.py  conformer.py  fastspeech2.py  vocoder.py
conformer_tts/text/: __init__.py  cleaners.py  frontend.py  symbols.py
conformer_tts/training/: __init__.py  lightning_module.py
scripts/: evaluate.py  export_onnx.py  preprocess.py  pull_from_hub.py  push_to_hub.py  synthesize.py  train.py
tests/: test_frontend.py  test_inference.py  test_model.py  test_text.py
